# inncentive

./: .gitignore  .start.ps1  docker-compose.yml  package-lock.json  package.json  start.ps1
services/ai-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai-service/app/: main.py
services/ai-service/app/api/: routes.py  schemas.py
services/ai-service/app/core/: config.py
services/ai-service/app/providers/: anthropic_provider.py
services/ai-service/app/services/: ia_execution_service.py
services/pdf-extractor/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/pdf-extractor/app/: main.py
services/pdf-extractor/app/api/: routes.py  schemas.py
services/pdf-extractor/app/core/: config.py  logger.py
services/pdf-extractor/app/extractors/: normalize.py  ocr.py  pdf_text.py  tables.py
services/pdf-extractor/app/parsers/: company_identification_parser.py  company_parser.py  company_registry_parser.py  equipment_parser.py  expenses_parser.py  hr_parser.py  projects_parser.py  receipt_parser.py  scorer.py  summary_table_parser.py  validators.py  version_detector.py
services/pdf-extractor/app/persistence/: mysql_store.py
services/pdf-extractor/app/services/: extraction_service.py
services/pdf-extractor/app/workers/: redis_worker.py
services/pdf-extractor/db/: bootstrap.sql
services/pdf-extractor/tests/: conftest.py
services/pdf-extractor/tests/fixtures/: texts.py
services/pdf-extractor/tests/unit/: test_hr_parser.py  test_receipt_parser.py  test_scorer.py  test_version_detector.py  (+1 more)
(+132 files in other folders)
