[project]
name = "ai-service"
version = "0.1.0"
description = "AI provider microservice for InnCentive"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "anthropic==0.64.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8020
